удалены лишние классы старой реализации, опттимизированно, скорректирована документация